--- a/index.html
+++ b/index.html
@@ -17,7 +17,23 @@
       <a href="https://github.com/antaresax/Project_1/zipball/master" class="btn">Download .zip</a>
       <a href="https://github.com/antaresax/Project_1/tarball/master" class="btn">Download .tar.gz</a>
     </section>
-
+ <div class="info">
+    <h1><strong>Hong Euy Shick</strong></h1>
+    <br>
+    <h3>Saxophonist l Composer l Media Art</h3>
+    <p > Feel free to contact mail :antaresax@gmail.com</p>
+    <h3>My Social</h3>
+    <ul>
+      <li><a href="http://antaresax.blog.me/10074073941" target="_blank"<strong>About me</strong></a></li>
+      <li><a href="http://antaresax.blog.me" target="_blank"<strong>My Blog</strong></a></li>
+      <li><a href="http://www.facebook.com/euyshick" target="_blank"<strong>My FaceBook</strong></a></li>
+    </ul>
+     <h3>Saxophone</h3>
+     <ul>
+      <li><a href="http://antaresax.blog.me/220515962090" target="_blank">My Album</a></li>
+      <li><a href="http://blog.naver.com/PostThumbnailView.nhn?blogId=antaresax&logNo=10102453171&categoryNo=65&parentCategoryNo=65" target="_blank"> Performance Video</a></li>
+     
+    </ul>
     <section class="main-content">
       <p>Dr .Hong -  Html,javascript,css, jquery  2015 project</p>
 
