--- a/index.html
+++ b/index.html
@@ -18,13 +18,10 @@
       <a href="https://github.com/antaresax/Project_1/tarball/master" class="btn">Download .tar.gz</a>
     </section>
  <div class="info">
-    <h1><strong>Hong Euy Shick</strong></h1>
+    <h1><strong>2015 Project_1</strong></h1>
     <br>
-    <h3>Saxophonist l Composer l Media Art</h3>
-    <p > Feel free to contact mail :antaresax@gmail.com</p>
-    <h3>My Social</h3>
     <ul>
-      <li><a href="http://antaresax.blog.me/10074073941" target="_blank"<strong>About me</strong></a></li>
+      <li><a href="https://antaresax.github.io/Project_1/html.html" target="_blank"<strong>About me</strong></a></li>
       <li><a href="http://antaresax.blog.me" target="_blank"<strong>My Blog</strong></a></li>
       <li><a href="http://www.facebook.com/euyshick" target="_blank"<strong>My FaceBook</strong></a></li>
     </ul>
