--- a/index.html
+++ b/index.html
@@ -21,16 +21,14 @@
     <h1><strong>2015 Project_1</strong></h1>
     <br>
     <ul>
-      <li><a href="https://antaresax.github.io/Project_1/html.html" target="_blank"<strong>About me</strong></a></li>
-      <li><a href="http://antaresax.blog.me" target="_blank"<strong>My Blog</strong></a></li>
-      <li><a href="http://www.facebook.com/euyshick" target="_blank"<strong>My FaceBook</strong></a></li>
+      <li><a href="https://antaresax.github.io/Project_1/html.html" target="_blank"<strong>Html</strong></a></li>
+       <li><a href="https://antaresax.github.io/Project_1/css.html" target="_blank"<strong>Css</strong></a></li>
+        <li><a href="https://antaresax.github.io/Project_1/javascript.html" target="_blank"<strong>Javascript</strong></a></li>
+         <li><a href="https://antaresax.github.io/Project_1/jquery.html" target="_blank"<strong>Jquery</strong></a></li>
+    
     </ul>
      <h3>Saxophone</h3>
-     <ul>
-      <li><a href="http://antaresax.blog.me/220515962090" target="_blank">My Album</a></li>
-      <li><a href="http://blog.naver.com/PostThumbnailView.nhn?blogId=antaresax&logNo=10102453171&categoryNo=65&parentCategoryNo=65" target="_blank"> Performance Video</a></li>
      
-    </ul>
     <section class="main-content">
       <p>Dr .Hong -  Html,javascript,css, jquery  2015 project</p>
 
